--- a/src/styles/AuthStyles.css
+++ b/src/styles/AuthStyles.css
@@ -1,12 +1,11 @@
 .form-container {
-  margin-top: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 70vh;
   flex-direction: column;
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  background-color: inherit;
+  /* background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%); */
 }
 
 .form-container form {
@@ -16,6 +15,7 @@
 }
 
 .form-container form .title {
+  color: #000;
   text-align: center;
   margin-bottom: 15px;
   font-weight: bold;
@@ -58,4 +58,27 @@
 
 .forgot-btn:hover {
   color: white !important;
+}
+
+select{
+  width: 100%;
+  height: 30px;
+  border: none;
+  border-bottom: 1px solid black;
+  font-size: 16px;
+  outline: none;
+}
+
+/* option{
+  height: 50px;
+} */
+
+select option{
+  height: 200px;
+}
+.alreg{
+  text-align: center;
+  align-items: center;
+  font-size: 18px;
+  color:red;
 }
